# DISSCO-2.0.2

./: .gitignore  CMakeLists.txt  premake4.lua
CMOD/: CMakeLists.txt
CMOD/src/: Bottom.cpp  Event.cpp
CMOD/src/muParser/: CMakeLists.txt
CMOD/src/parser/: CMakeLists.txt
Documents/: tutorial.odt  tutorial2.odt
LASS/: CMakeLists.txt
LASSIE/: CMakeLists.txt
LASSIE/src/: EnvLibDrawingArea.cpp  EnvLibDrawingArea.h  EnvelopeLibraryEntry.cpp  EnvelopeLibraryEntry.h  EnvelopeLibraryWindow.cpp  EnvelopeLibraryWindow.h  EventAttributesViewController.cpp  EventAttributesViewController.h  FileOperations.cpp  FileOperations.h  FunctionGenerator.cpp  FunctionGenerator.h  HelpOperations.cpp  HelpOperations.h  IEvent.cpp  IEvent.h  MainWindow.cpp  MainWindow.h  MarkovModelLibraryWindow.cpp  MarkovModelLibraryWindow.h  ObjectWindow.cpp  ObjectWindow.h  PaletteViewController.cpp  PaletteViewController.h  ProjectViewController.cpp  ProjectViewController.h  SharedPointers.cpp
LASSIE/src/UI/: CheckObjectNameExists.ui  DuplicateObjectDialog.ui  EnvelopeLibraryWindow.ui  FunGenMakeEnvelopeSubAlignment.ui  FunGenSPAChannelAlignment.ui  FunGenSPAPartialAlignment.ui  FunGenSelectSubAlignment.ui  FunGenStochosSubAlignment.ui  FunctionGenerator.ui  HelpAbout.ui  Modifier.ui  NoteModifiersConfiguration.ui  ObjectWindow.ui  PaletteInsertTypeMismatch.ui  ProjectPropertiesDialog.ui  RawList.ui  SoundAttributes.ui  SynthesizeDialog.ui  WarningNoDatLibDialog.ui
